--- a/index.html
+++ b/index.html
@@ -1,47 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Results summary component</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="style/style.css" />
+    <title>Frontend Mentor | Results summary component</title>
+  </head>
+  <body>
+    <section class="card">
+      <div class="card__result">
+        <p class="card__result--title">Your Result</p>
+        <div class="card__result--points">
+          <p class="card__result--points--pontuation">76</p>
+          <p class="card__result--points--of">of 100</p>
+        </div>
+        <p class="card__result--message--title">Great</p>
+        <p class="card__result--message">
+          You scored higher than 65% of the people who have taken these tests.
+        </p>
+      </div>
+      <div class="card__summary">
+        <p class="card__summary--title">Summary</p>
+        <div class="card__summary--reaction">
+          <p class="card__summary--reaction--title">
+            <img src="/assets/images/icon-reaction.svg" alt="" />Reaction
+          </p>
+          <p class="card__summary--reaction--points">80 <span>/ 100</span></p>
+        </div>
+        <div class="card__summary--memory">
+          <p class="card__summary--memory--title">
+            <img src="/assets/images/icon-memory.svg" alt="" />Memory
+          </p>
+          <p class="card__summary--memory--points">92 <span>/ 100</span></p>
+        </div>
+        <div class="card__summary--verbal">
+          <p class="card__summary--verbal--title">
+            <img src="/assets/images/icon-verbal.svg" alt="" />Verbal
+          </p>
+          <p class="card__summary--verbal--points">61 <span>/ 100</span></p>
+        </div>
+        <div class="card__summary--visual">
+          <p class="card__summary--visual--title">
+            <img src="/assets/images/icon-visual.svg" alt="" />Visual
+          </p>
+          <p class="card__summary--visual--points">72 <span>/ 100</span></p>
+        </div>
+        <button class="card__summary--continue">Continue</button>
+      </div>
+    </section>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  Your Result
-  76
-  of 100
-
-  Great
-  You scored higher than 65% of the people who have taken these tests.
-  
-  Summary
-
-  Reaction
-  80 / 100
-
-  Memory
-  92 / 100
-
-  Verbal
-  61 / 100
-
-  Visual
-  72 / 100
-
-  Continue
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="https://github.com/barbarachagas">Barbara Chagas</a>.
+    </div>
+  </body>
 </html>
